--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,12 @@
 .icon-block {
   padding: 0 15px;
 }
+
 .icon-block .material-icons {
 	font-size: inherit;
+}
+
+.poze {
+  width: 20px;
+  height: 50%;
 }
